--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "dependencies": {
         "autoprefixer": "^9.1.5",
         "postcss-cli": "^6.0.0",
-        "tailwindcss": "^0.6.6"
+        "tailwindcss": "^0.7.0"
     },
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^1.0.1",
         "cssnano": "^4.0.5"
     },
     "scripts": {
+	"dev:js": "./node_modules/.bin/tailwind init tailwind.config.js",
         "dev:css": "./node_modules/.bin/tailwind build tailwind.config.css -c tailwind.config.js -o dist/css/tailwind.css",
         "build:css": "postcss tailwind.config.css -o dist/css/tailwind.min.css"
     }
