--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "dependencies": {
         "autoprefixer": "^9.4.7",
         "postcss-cli": "^6.1.1",
-        "rimraf": "^2.6.3",
-        "tailwindcss": "^0.7.4"
+        "rimraf": "^2.6.3"
     },
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^1.1.0",
-        "cssnano": "^4.1.9"
+        "cssnano": "^4.1.10",
+        "tailwindcss": "^1.0.0-beta.3"
     },
     "scripts": {
         "del:js": "rimraf tailwind.config.js",
