--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     },
     "main": "postcss.config.js",
     "dependencies": {
-        "autoprefixer": "^9.5.0",
+        "autoprefixer": "^9.6.0",
         "postcss-cli": "^6.1.2",
         "rimraf": "^2.6.3"
     },
     "devDependencies": {
-        "@fullhuman/postcss-purgecss": "^1.1.0",
+        "@fullhuman/postcss-purgecss": "^1.2.0",
         "cssnano": "^4.1.10",
-        "tailwindcss": "^1.0.0-beta.3"
+        "tailwindcss": "^1.0.3"
     },
     "scripts": {
         "del:js": "rimraf tailwind.config.js",
